--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -38,7 +38,7 @@ The general design of a single chamber \gls{lartpc} is shown in \FigureRef{fig:l
     \label{fig:lartpc}
 \end{figure}
 
-Along with the global volume of a detector which is defined by it's dimensions, there are usually two other volumes associated with \glspl{lartpc}; the \textit{active} volume and the \textit{fiducial} volume. The active volume is defined as the volume which is enclosed within the \gls{tpc} which is the volume of the detector which allows for event detection. The fiducial volume is not directly defined by the physical design of the detector, but is instead the region within the active volume where event reconstruction is thought to be well understood. Events occurring right at the edge of the \gls{tpc} may be difficult to reconstruct and are therefore poorly understood. Additionally, background events tend to occur close to the edge of the \gls{tpc}, so by only considering events within the fiducial volume, the percentage of well understood signal events is maximised \cite{PDG_fiducial_vol}. The active and fiducial volumes used in each of the \gls{sbn} detectors is defined in \AppendixRef{app:Detector_Volumes}.
+Along with the global volume of a detector which is defined by it's dimensions, there are usually two other volumes associated with \glspl{lartpc}; the \textit{active} volume and the \textit{fiducial} volume. The active volume is defined as the volume which is enclosed within the \gls{tpc} which is the volume of the detector which allows for event detection. The fiducial volume is not directly defined by the physical design of the detector, but is instead the region within the active volume where event reconstruction is thought to be well understood. Events occurring right at the edge of the \gls{tpc} may be difficult to reconstruct and are therefore poorly understood. Additionally, background events tend to occur close to the edge of the \gls{tpc}, so by only considering events within the fiducial volume, the percentage of well understood signal events is maximised \cite{PDG_2022}. The active and fiducial volumes used in each of the \gls{sbn} detectors is defined in \AppendixRef{app:Detector_Volumes}.
 
 
 \newpage
@@ -146,16 +146,16 @@ The \gls{bnb} is produced by firing 8 GeV protons onto a beryllium target result
 \begin{table}[h]
 \begin{tabular}{ccc}
 Particle                 & Decay Mode                        & Branching Ratio (\%) \\ \hline
-\multirow{2}{*}{$\pi^+$} & $\mu^+ + \nu_{\mu}$               & 99.9877             \\
-                         & $e^+ + \nu_e$                     & 0.0123              \\ \hline
-\multirow{3}{*}{$k^+$}   & $\mu^+ + \nu_{\mu}$               & 63.44               \\
-                         & $\pi^0 + e^+ + \nu_e$             & 4.98                \\
-                         & $\pi^0 + \mu^+ \nu_{\mu}$         & 3.32                \\ \hline
-\multirow{4}{*}{$k^0$}   & $\pi^- + e^+ + \nu_e$             & 20.333              \\
-                         & $\pi^+ + e^- + \bar{\nu}_e$         & 20.197              \\
-                         & $\pi^- + \mu^+ + \nu_{\mu}$       & 13.551              \\
-                         & $\pi^+ + \mu^- + \bar{\nu}_{\mu}$ & 13.469              \\ \hline
-$\mu^+$                   & $e^+ + \nu_e + \bar{\nu}_e$       & 100                
+\multirow{2}{*}{$\pi^+$} & $\mu^+ + \numu$               & 99.9877             \\
+                         & $e^+ + \nue$                     & 0.0123              \\ \hline
+\multirow{3}{*}{$k^+$}   & $\mu^+ + \numu$               & 63.44               \\
+                         & $\pi^0 + e^+ + \nue$             & 4.98                \\
+                         & $\pi^0 + \mu^+ \numu$         & 3.32                \\ \hline
+\multirow{4}{*}{$k^0$}   & $\pi^- + e^+ + \nue$             & 20.333              \\
+                         & $\pi^+ + e^- + \nuebar$         & 20.197              \\
+                         & $\pi^- + \mu^+ + \numu$       & 13.551              \\
+                         & $\pi^+ + \mu^- + \numubar$ & 13.469              \\ \hline
+$\mu^+$                   & $e^+ + \nue + \nuebar$       & 100                
 \end{tabular}
 \caption[Hadron decay mode in the BNB.]{The decay modes of the hadrons produced by the \gls{bnb} when running in neutrino mode. The branching ratio of each of the decay modes is also given \cite{BNB_flux}.}
 \label{Table: BNB decay modes}
@@ -168,10 +168,10 @@ A current of 174 kA is supplied to the magnetic horn in 143 $\mu$s pulses which 
 \begin{table}[h]
 \begin{tabular}{ccc}
 Neutrino Flavour & \% in Neutrino Mode & \% in Anti-neutrino Mode \\ \hline
-$\nu_\mu$        & 93.6                & 15.71                    \\
-$\bar{\nu}_{\mu}$  & 5.86                & 83.73                    \\
-$\nu_e$          & 0.52                & 0.2                      \\
-$\bar{\nu}_{e}$    & 0.05                & 0.4                     
+$\numu$        & 93.6                & 15.71                    \\
+$\numubar$  & 5.86                & 83.73                    \\
+$\nue$          & 0.52                & 0.2                      \\
+$\nuebar$    & 0.05                & 0.4                     
 \end{tabular}
 \caption[BNB flavour composition.]{The neutrino flavour composition of the \gls{bnb} when it's running in either neutrino or anti-neutrino mode \cite{BNB_flux}.}
 \label{Table: BNB composition}
@@ -184,7 +184,7 @@ $\bar{\nu}_{e}$    & 0.05                & 0.4
      \caption[Neutrino fluxes in SBN.]{The predicted flux of the \gls{bnb} at \gls{sbnd} (left), \gls{microboone} (middle) and \gls{icarus} (right) for both electron and muon neutrinos and anti-neutrinos \cite{SBN_Proposal}.}
      \label{fig: SBN flux}
 \end{figure}
-The systematic uncertainties associated with the \gls{bnb} account for an error of $\sim 9\%$ at the peak of the $\nu_\mu$ flux with a larger error for energies either side of the peak. The systematic uncertainties are mainly due to determining the rate and spectrum of neutrinos for each proton on target, determining the rate and spectrum of secondary particles produced from protons interacting with the beryllium target, the rate of hadronic interactions, the focusing properties of the magnetic horn and the beamline geometry \cite{BNB_flux}. 
+The systematic uncertainties associated with the \gls{bnb} account for an error of $\sim 9\%$ at the peak of the $\numu$ flux with a larger error for energies either side of the peak. The systematic uncertainties are mainly due to determining the rate and spectrum of neutrinos for each proton on target, determining the rate and spectrum of secondary particles produced from protons interacting with the beryllium target, the rate of hadronic interactions, the focusing properties of the magnetic horn and the beamline geometry \cite{BNB_flux}. 
 
 \section{Neutrino Interactions}\label{sec:neutrino_interactions}
 
@@ -438,7 +438,7 @@ respectively \cite{Measurement_of_the_Water_to_Scintillator_Charged-Current_Cros
 \subsection*{Photon Detection System}
 The \gls{pds} consists of a total of 24 \textit{boxes}, 12 of which will be mounted behind each \gls{apa}. Each box houses 5 \glspl{pmt} and 8 \glspl{arapuca} (specifically, X-ARAPUCA's are used which are an advancement over the initial \gls{arapuca} design) as shown in \FigureRef{fig:pds_box}. The 4 outer \glspl{pmt} of each box are coated with \gls{tpb} whilst the central one remains uncoated. The scintillation light produced has wavelengths in the \gls{vuv} region, however the \glspl{pmt} are only able to detect visible light. The \gls{tpb} coating shifts the wavelength of the \gls{vuv} light into the visible region allowing it to be detected. Therefore, the coated \glspl{pmt} are sensitive to both visible and \gls{vuv} light whilst the uncoated \glspl{pmt} are only sensitive to visible light \cite{LArTPC_review}. 
 
-\glspl{arapuca} are a novel light trap which consist of a box where the internal surfaces are highly reflective. The surface of the \gls{arapuca} which faces the incoming light consists of dichroic filter with a wavelength shifter either side of the filter. The wavelength of the light which is incident on the outermost shifter is shifted such that it may pass through the dichroic filter and after passing through the filter the light is again wavelength shifted so that it may no longer pass through the filter and thus remains trapped in the \gls{arapuca}. A schematic of the \gls{arapuca} design is shown on the left of \FigureRef{fig:arapuca}. The inside of the \gls{arapuca} module contains a \gls{sipm} photo-sensor in order to detect the light. Due to the highly reflective nature of the inside of the \gls{arapuca}, only a small region needs to be exposed to a photo-sensor in order to detect the trapped photons \cite{ARAPUCA}. The X-ARAPUCA improves on the initial design by replacing the inner wavelength shifter with an acrylic slab with the wavelength shifter implanted in the slab and the photo-sensor being directly attached to the slab. Light entering the X-ARAPUCA may be detected in same way as was done in the original \gls{arapuca} (\FigureRef{fig:arapuca}: Left), however the photons may also become trapped in the slab by total internal reflection and travel within the slab to the photo-sensor (\FigureRef{fig:arapuca}: Middle) or if the light enters at a large angle, the photons may become trapped between the surface of the slab and the filter and will travel to the photo-sensor without ever entering the slab (\FigureRef{fig:arapuca}: Right). The middle scenario of \FigureRef{fig:arapuca} represents a direct improvement over the original \gls{arapuca} design because the number of reflections on the internal sides of the X-ARAPUCA module is reduced which in turn increases the photon detection efficiency \cite{X-ARAPUCA}. 
+\glspl{arapuca} are a novel light trap which consist of a box where the internal surfaces are highly reflective. The surface of the \gls{arapuca} which faces the incoming light consists of dichroic filter with a wavelength shifter either side of the filter. The wavelength of the light which is incident on the outermost shifter is shifted such that it may pass through the dichroic filter and after passing through the filter the light is again wavelength shifted so that it may no longer pass through the filter and thus remains trapped in the \gls{arapuca}. A schematic of the \gls{arapuca} design is shown on the left of \FigureRef{fig:arapuca}. The inside of the \gls{arapuca} module contains a \gls{sipm} photo-sensor in order to detect the light. Due to the highly reflective nature of the inside of the \gls{arapuca}, only a small region needs to be exposed to a photo-sensor in order to detect the trapped photons \cite{ARAPUCA}. The X-ARAPUCA improves on the initial design by replacing the inner wavelength shifter with an acrylic slab with the wavelength shifter implanted in the slab and the photo-sensor being directly attached to the slab. Light entering the X-ARAPUCA may be detected in same way as was done in the original \gls{arapuca} (\FigureRef{fig:arapuca}: Left), however the photons may also become trapped in the slab by total internal reflection and travel within the slab to the photo-sensor (\FigureRef{fig:arapuca}: Middle) or if the light enters at a large angle, the photons may become trapped between the surface of the slab and the filter and will travel to the photo-sensor without ever entering the slab (\FigureRef{fig:arapuca}:~Right). The middle scenario of \FigureRef{fig:arapuca} represents a direct improvement over the original \gls{arapuca} design because the number of reflections on the internal sides of the X-ARAPUCA module is reduced which in turn increases the photon detection efficiency \cite{X-ARAPUCA}. 
 
 \begin{figure}[!h]
     \centering
@@ -496,14 +496,14 @@ The \gls{crt} for the vertical sides are again outside the \gls{tpc} and behind 
 
 The \gls{sbn} program was designed with the aim of resolving the contentious results observed by a number of experiments as was discussed in \SectionRef{subchap:Motivation for Sterile Neutrinos}. Since it was purposely planned with this in mind, the \gls{sbn} program has a number of advantages over previous experiments in the hopes of detecting eV scale sterile neutrinos: it has a multi detector design, the near and far detector are positioned such that the oscillation signal is close to maximal for an expected set of oscillation parameters, the detectors use the same technology and have the same target medium \cite{SBN_paper}. 
 
-The top two plots of \FigureRef{fig:osc_probability} show the expected oscillation probability for the \nue appearance channel as a function of the baseline for two sets of oscillation parameters, $(sin^22\theta_{\mu e}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ and a neutrino energy of 700 MeV. The neutrino energy corresponds to the peak energy of the \gls{bnb} and the oscillation points are chosen as the upper and lower limits of the global \nue appearance data. In both cases there is a clear difference in the oscillation probability between the near and far detector showing that the \gls{sbn} program is sensitive to oscillations within this parameter range \cite{SBN_paper}. The bottom two plots show the oscillation probability for the same two oscillation points as a function of neutrino energy for baselines of 110 m and 600 m. The ratio of the oscillation probability at 600 m to that at 110 m is also shown. Again there is a clear difference in the oscillation probability for most energies showing that the \gls{sbn} program is sensitive to a wide range of neutrino energies \cite{SBN_paper}. The \nue appearance oscillation sensitivity constructed at the time of the proposal is shown in \FigureRef{fig:SBN_proposal_sensitivity}. These contours include the relevant backgrounds and systematic uncertainties with the exception of detector systematics. 
+The top two plots of \FigureRef{fig:osc_probability} show the expected oscillation probability for the \nue appearance channel as a function of the baseline for two sets of oscillation parameters, $(\sin^2{2\theta_{\mu e}}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ and a neutrino energy of 700 MeV. The neutrino energy corresponds to the peak energy of the \gls{bnb} and the oscillation points are chosen as the upper and lower limits of the global \nue appearance data. In both cases there is a clear difference in the oscillation probability between the near and far detector showing that the \gls{sbn} program is sensitive to oscillations within this parameter range \cite{SBN_paper}. The bottom two plots show the oscillation probability for the same two oscillation points as a function of neutrino energy for baselines of 110 m and 600 m. The ratio of the oscillation probability at 600 m to that at 110 m is also shown. Again there is a clear difference in the oscillation probability for most energies showing that the \gls{sbn} program is sensitive to a wide range of neutrino energies \cite{SBN_paper}. The \nue appearance oscillation sensitivity constructed at the time of the proposal is shown in \FigureRef{fig:SBN_proposal_sensitivity}. These contours include the relevant backgrounds and systematic uncertainties with the exception of detector systematics. 
 
 The event rates in the near and far detector are correlated since both use the same interaction medium and the same technology to detect interactions. As \FigureRef{fig:osc_probability} shows, \gls{sbnd} will observe no or very few oscillated events and will give a measure of the absolute flux and interaction cross-section whereas both \gls{microboone} and \gls{icarus} are able to detect oscillated events with significant probability. Typically the \gls{bnb} flux uncertainties and interaction cross-section uncertainties are fairly large, however, comparing results from \gls{sbnd} to \gls{microboone} and \gls{icarus} and noting the correlation between the detectors allows the uncertainties to be constrained \cite{SBN_paper}. 
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap3/osc_probability.png}
-    \caption[SBN oscillation probability.]{The oscillation paramters used in the two left and right plots are $(sin^22\theta_{\mu e}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ respectively. Top: The oscillation probability as a function of the baseline for the \nue appearance channel. A neutrino energy of 700 MeV is used in both cases. Bottom: The oscillation probability is shown as a function of neutrino energy in both the near and far detector. Additionally, the ratio of the oscillation probabilities between the two detectors is also shown. \cite{SBN_paper}}
+    \caption[SBN oscillation probability.]{The oscillation paramters used in the two left and right plots are $(\sin^2{2\theta_{\mu e}}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ respectively. Top: The oscillation probability as a function of the baseline for the \nue appearance channel. A neutrino energy of 700 MeV is used in both cases. Bottom: The oscillation probability is shown as a function of neutrino energy in both the near and far detector. Additionally, the ratio of the oscillation probabilities between the two detectors is also shown. \cite{SBN_paper}}
     \label{fig:osc_probability}
 \end{figure}
 
