--- a/glossary.tex
+++ b/glossary.tex
@@ -37,6 +37,7 @@
 \newacronym{miniboone}{MiniBooNE}{Mini Booster Neutrino Experiment}
 \newacronym{minos}{MINOS}{Main Injector Neutrino Oscillation Search}
 \newacronym{mip}{MIP}{Minimum Ionising Particle}
+\newacronym{msw}{MSW}{Mikheyev–Smirnov–Wolfenstein}
 \newacronym{nc}{NC}{Neutral Current}
 \newacronym{nist}{NIST}{National Institute of Standards and Technology}
 \newacronym{p}{P}{parity}
