--- a/mythesis.bib
+++ b/mythesis.bib
@@ -247,6 +247,14 @@ year = "2018"
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.87.071301}
 }
 
+@misc{SNO_ES,
+      author        = "Y. Chan",
+      title         = "{RESULTS FROM SNO}",
+      year          = "2001",
+      howpublished  = {\href{https://www.osti.gov/servlets/purl/822831}{https://www.osti.gov/servlets/purl/822831}},
+      note          = "DOE Contract No. DE-AC03-76SF00098",
+}
+
 @article{tau_lepton_discovery,
   title = "{Evidence for Anomalous Lepton Production in ${e}^{+}\ensuremath{-}{e}^{\ensuremath{-}}$ Annihilation}",
   author = {Perl, M. L. and Abrams, G. S. and Boyarski, A. M. and Breidenbach, M. and Briggs, D. D. and Bulos, F. and Chinowsky, W. and Dakin, J. T. and Feldman, G. J. and Friedberg, C. E. and Fryberger, D. and Goldhaber, G. and Hanson, G. and Heile, F. B. and Jean-Marie, B. and Kadyk, J. A. and Larsen, R. R. and Litke, A. M. and L\"uke, D. and Lulu, B. A. and L\"uth, V. and Lyon, D. and Morehouse, C. C. and Paterson, J. M. and Pierre, F. M. and Pun, T. P. and Rapidis, P. A. and Richter, B. and Sadoulet, B. and Schwitters, R. F. and Tanenbaum, W. and Trilling, G. H. and Vannucci, F. and Whitaker, J. S. and Winkelmann, F. C. and Wiss, J. E.},
@@ -607,7 +615,36 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@article{Wolfenstein,
+  title = {Neutrino oscillations in matter},
+  author = {Wolfenstein, L.},
+  journal = {Phys. Rev. D},
+  volume = {17},
+  issue = {9},
+  pages = {2369--2374},
+  numpages = {0},
+  year = {1978},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.17.2369},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.17.2369}
+}
 
+@book{peskin_and_schroeder,
+title = "{An Introduction to Quantum Field Theory}",
+author = "{Micheal E. Peskin and Daniel V. Schroeder}", 
+year = 1995, 
+publisher = "{Perseus Books Publishing}",
+isbn = {0-201-50397-2}
+}
+
+@misc{mass_hierarchy_discussion,
+  url = {https://arxiv.org/abs/1307.5487},
+  author = {Stephen Parke},
+  title = "{Determining the Neutrino Mass Hierarchy}",
+  year = "2006",
+  note = "{FERMILAB-CONF-06-248-T}"
+}
 
 %%%%%%%%%%%%%%%%%
 % SBN Programme %
@@ -678,7 +715,7 @@ month = {7}
     Series = "BestMaster"
 }
 
-@article{PDG_fiducial_vol,
+@article{PDG_2022,
     author = "Workman, R. L. and Others",
     collaboration = "Particle Data Group",
     title = "{Review of Particle Physics: Particle Detectors for Non-Accelerator Physics}",
